--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.7.0",
     "next": "15.3.1",
     "prisma": "^6.7.0",
     "react": "^19.0.0",
