--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "iron-session": "^8.0.4",
     "next": "15.3.1",
     "prisma": "^6.7.0",
     "react": "^19.0.0",
